<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <Button
        android:id="@+id/updateEmployeeDBButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/update_employee_db_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeDBLastUpdateText" />

    <TextView
        android:id="@+id/employeeDBLastUpdateText"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/last_update_text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imeiText" />

    <Button
        android:id="@+id/settingsBackButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/macText"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/mac_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imeiText" />

    <EditText
        android:id="@+id/imeiText"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:hint="@string/imei_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsBackButton" />

    <Button
        android:id="@+id/saveImeiAndMACButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="@+id/macText"
        app:layout_constraintTop_toBottomOf="@+id/macText" />

    <FrameLayout
        android:id="@+id/progressBarContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="90dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="320dp"
            android:scaleY="3" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>