<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/BTN_settings"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BTN_save"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV_rfidStatus"
        android:layout_width="426dp"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/RV_employees"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/SV_employees"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/RV_employees"
        app:layout_constraintStart_toStartOf="@+id/RV_employees"
        app:layout_constraintTop_toBottomOf="@+id/TV_rfidStatus" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV_employees"
        android:layout_width="500dp"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SV_employees" />

    <ImageView
        android:id="@+id/IV_rfidOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/off"
        app:layout_constraintBottom_toBottomOf="@+id/TV_rfidStatus"
        app:layout_constraintStart_toStartOf="@+id/RV_employees"
        app:srcCompat="@drawable/wifi" />

    <ImageView
        android:id="@+id/IV_rfidOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/on"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/TV_rfidStatus"
        app:layout_constraintStart_toStartOf="@+id/RV_employees"
        app:srcCompat="@drawable/wifi_green" />

</androidx.constraintlayout.widget.ConstraintLayout>